--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.9",
     "aws-amplify": "^6.2.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
